data/derived/comb/progs/unify/prog4551.ml.out
Characters 368-371:
  | Thresh (var7, var8, var9, var0) -> "("exprToString var7 ^ "<" ^ exprToString var8 ^ " ? " ^ exprToString var9 ^ " : " ^ exprToString var0 ^ ")";;
                                       ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
